samples/_failures_safe/1761501644_783b84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_271b28e5.c: In function ‘main’:
./samples/SAFE/__tmp_271b28e5.c:144:26: error: expected ‘;’ at end of input
  144 |             line[len - 1]
      |                          ^
      |                          ;
./samples/SAFE/__tmp_271b28e5.c:144:13: error: expected declaration or statement at end of input
  144 |             line[len - 1]
      |             ^~~~
./samples/SAFE/__tmp_271b28e5.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_271b28e5.c:144:13: error: expected declaration or statement at end of input
